--- a/_include/analytics.html
+++ b/_include/analytics.html
@@ -1,9 +1,9 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127414532-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-28209RVRZB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-127414532-1');
+  gtag('config', 'G-28209RVRZB');
 </script>
